[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "asn-reality-local-audit"
version = "0.1.0"
description = "Local one-shot ASN and Xray Reality camouflage domain audit CLI"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
  "cryptography>=42.0.0",
  "dnspython>=2.6.0",
  "httpx>=0.27.0",
  "pydantic>=2.7.0",
  "rich>=13.7.0",
  "typer>=0.12.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
  "pytest-cov>=5.0.0",
]

[project.scripts]
asn-reality-audit = "asn_reality_audit.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/asn_reality_audit"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
